--- a/comp351/Labs/1/quizQuestions/index.html
+++ b/comp351/Labs/1/quizQuestions/index.html
@@ -125,7 +125,7 @@
                   document.getElementById(valiadation[i]).innerHTML="Answer is correct!";
               }
               else {
-                  document.getElementById(valiadation[i]).innerHTML="Answer is wrong!";
+                  document.getElementById(valiadation[i]).innerHTML="Answer is wrong! The correct answer is: " + answers[i];
               }
           }
       }
