--- a/comp351/comp351.html
+++ b/comp351/comp351.html
@@ -11,9 +11,10 @@
         </div>
         <div class="list">
              <ul>
-                <a href="Labs/1/quizQuestions/index.html"> Lab-1 Hard-coded quiz</a> <br />
+                <a href="Labs/1/quizQuestions/index.html"> Lab-1 Hardcoded quiz</a> <br />
                 <a> Lab-2 </a> <br />
                 <a> Lab-3 </a> <br />
+		<a href="Labs/IndividualProject/frontend/index.html">Individual Project</a> <br />
              </ul>
         </div>
         <a href="../index.html">
